changed <ul/> to <ol/> to be semantically correct.

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 			<header>
 				<h1><a href="#" id="logo">Awesome Bands</a></h1>
 			</header>
-			<ul class="leaderboard fetching">
+			<ol class="leaderboard fetching">
 				<li class="template is-hidden">
 					<div class="is-half truncate leaderboard-name"></div>
 					<div class="is-half truncate leaderboard-metrics">
 						<span class="leaderboard-metrics--count"></span> <small>Mentions</small>
 					</div>
 				</li>
-			</ul>
+			</ol>
 		</section>
 	</div>
 
